--- a/content/index.yaml
+++ b/content/index.yaml
@@ -4,7 +4,7 @@ tagline: Full-stack web and iOS developer. Podcaster. Maker of things.
 
 socials:
   - title: Twitter
-    href: https://twitter.com/schrockwel
+    href: https://twitter.com/schrockwell
   - title: YouTube
     href: https://youtube.com/schrockwell
   - title: GitHub
