Adding Flickr link

--- a/content/index.yaml
+++ b/content/index.yaml
@@ -9,6 +9,8 @@ socials:
     href: https://youtube.com/schrockwell
   - title: GitHub
     href: https://github.com/schrockwell
+  - title: Flickr
+    href: https://www.flickr.com/people/schrockwell/
 
 sections:
   - title: Current Projects
