docker-compose formatting tweak

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
     app:
         build: .
         ports:
-            - "5000:5000"
+            - '5000:5000'
         volumes:
-            - type: bind
-              source: .
-              target: /app
+            - .:/app
