--- a/content/index.yaml
+++ b/content/index.yaml
@@ -1,20 +1,27 @@
 title: Rockwell Schrock
 
-tagline: Full-stack web and iOS developer. Podcaster. Maker of things.
+tagline: Full-stack web and iOS developer. Maker of things.
 
 socials:
   - title: Twitter
     href: https://twitter.com/schrockwell
+    
   - title: YouTube
     href: https://youtube.com/schrockwell
+    
   - title: GitHub
     href: https://github.com/schrockwell
+    
   - title: Flickr
     href: https://www.flickr.com/people/schrockwell/
 
 sections:
   - title: Current Projects
     projects:
+      - title: DockYard
+        subtitle: Senior Software Engineer
+        href: https://dockyard.com
+
       - title: Remote Ham Radio
         subtitle: Get on the air from anywhere
         href: https://www.remotehamradio.com/
@@ -27,12 +34,12 @@ sections:
         subtitle: Radio propagation utility
         href: https://www.ww1x.com/waveguide/
 
-      - title: Does Not Compute
-        subtitle: Weekly development podcast
-        href: https://dnc.show/
-
   - title: Recent Projects
     projects: 
+      - title: Does Not Compute
+        subtitle: Weekly podcast
+        href: https://dnc.show/
+
       - title: METAR Map
         subtitle: Weather at a glance
         to: projects/metar-map
